httpserver-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: httpserver-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: httpserver
  template:
    metadata:
      labels:
        app: httpserver
    spec:
      containers:
        - name: httpserver
          image: httpserver
          readinessProbe:
            exec:
              command:
                - curl
                - /healthz
            initialDelaySeconds: 5
            periodSeconds: 5
