httpserver-istio.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: httpserver-istio
spec:
  replicas: 1
  selector:
    matchLabels:
      app: httpserver-istio
  template:
    metadata:
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "80"
      labels:
        app: httpserver-istio
    spec:
      containers:
        - name: httpserver-istio
          imagePullPolicy: Always
          image: weilesi/httpserver:v1.0.1-metrics
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: httpserver-istio
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: httpserver-istio
