httpserver-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-service
spec:
  selector:
    app: httpserver
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8099
  type: ClusterIP
