httpserver-ingress-ca.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/issuer: my-crypt-prod
  name: weilesi
spec:
  ingressClassName: nginx
  rules:
    - host: job8.dingshengjishu.com
      http:
        paths:
          - backend:
              service:
                name: my-service
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - job8.dingshengjishu.com
        secretName: my-crypt-tls
